# react-native-svga-player

./: CONTRIBUTING.md  README.md  package.json  react-native-svga-player.podspec  tsconfig.json
android/: .project  build.gradle
android/src/main/java/bang/svga/player/: RNSvgaPlayerManager.java
harmony/: svgaplayer.har
harmony/svgaplayer/: .gitignore  Index.ets  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
harmony/svgaplayer/src/main/: module.json5
harmony/svgaplayer/src/main/cpp/: CMakeLists.txt  SvgaPlayerPackage.h
harmony/svgaplayer/src/main/ets/: SvgaPlayerPackage.ets
harmony/svgaplayer/src/main/ets/components/: SvgaPlayerView.ets
harmony/svgaplayer/src/ohosTest/: module.json5
lib/: index.d.ts  index.js
src/: RNSvgaPlayer.tsx  SvgaPlayerViewNativeComponent.ts  index.tsx
